[gd_scene load_steps=73 format=2]

[ext_resource path="res://player/character.png" type="Texture" id=1]
[ext_resource path="res://player/player_shader.tres" type="Material" id=2]
[ext_resource path="res://player/camera.gd" type="Script" id=3]
[ext_resource path="res://player/animated_sprite.gd" type="Script" id=4]
[ext_resource path="res://player/fsm.gd" type="Script" id=5]
[ext_resource path="res://player/idle.gd" type="Script" id=6]
[ext_resource path="res://player/water_move.gd" type="Script" id=7]
[ext_resource path="res://player/dash.gd" type="Script" id=8]
[ext_resource path="res://player/walk.gd" type="Script" id=9]
[ext_resource path="res://player/water_idle.gd" type="Script" id=10]
[ext_resource path="res://player/fall.gd" type="Script" id=11]
[ext_resource path="res://player/footstep/50798__smcameron__rocks6.wav" type="AudioStream" id=12]
[ext_resource path="res://player/hurt.wav" type="AudioStream" id=13]
[ext_resource path="res://player/jump.gd" type="Script" id=14]
[ext_resource path="res://player/sprint.gd" type="Script" id=15]
[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=16]
[ext_resource path="res://player/player.gd" type="Script" id=17]
[ext_resource path="res://player/dust.tscn" type="PackedScene" id=18]
[ext_resource path="res://player/dash.wav" type="AudioStream" id=19]
[ext_resource path="res://player/wall_slide.gd" type="Script" id=20]
[ext_resource path="res://player/character_dash.png" type="Texture" id=21]
[ext_resource path="res://player/character_dash_reverse.png" type="Texture" id=22]
[ext_resource path="res://player/wall_jump.gd" type="Script" id=23]
[ext_resource path="res://player/die.wav" type="AudioStream" id=24]
[ext_resource path="res://player/dash_failed.wav" type="AudioStream" id=25]
[ext_resource path="res://player/powerup_adder.gd" type="Script" id=26]
[ext_resource path="res://player/spawn.wav" type="AudioStream" id=27]
[ext_resource path="res://player/equipable.gd" type="Script" id=28]
[ext_resource path="res://player/421184__inspectorj__water-pouring-a.wav" type="AudioStream" id=29]
[ext_resource path="res://player/233415__rocktopus__splash16.wav" type="AudioStream" id=30]
[ext_resource path="res://player/footstep_sounds.gd" type="Script" id=31]
[ext_resource path="res://player/footstep/347371__drfx__soft-grass-foot-step.wav" type="AudioStream" id=32]
[ext_resource path="res://player/footstep/110101__ronaldvanwonderen__heavy-wood-footstep-2.wav" type="AudioStream" id=33]
[ext_resource path="res://player/footstep/151229__owlstorm__grassy-footstep-2.wav" type="AudioStream" id=34]
[ext_resource path="res://player/footstep/50794__smcameron__rocks2.wav" type="AudioStream" id=35]
[ext_resource path="res://player/150839__toxicwafflezz__bullet-impact-3.wav" type="AudioStream" id=36]
[ext_resource path="res://player/footstep/211457__pgi__sand-step.wav" type="AudioStream" id=37]
[ext_resource path="res://player/footstep/50797__smcameron__rocks5.wav" type="AudioStream" id=38]
[ext_resource path="res://world_all/light.png" type="Texture" id=39]
[ext_resource path="res://player/equippable_holder.gd" type="Script" id=40]
[ext_resource path="res://player/footstep_sound.gd" type="Script" id=41]
[ext_resource path="res://player/footstep/397946__inspectorj__footsteps-snow-a.wav" type="AudioStream" id=42]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.5
height = 14.0

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 6.5, 3 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.5, 10 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 11, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 44, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 55, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 66, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 77, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 55, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 44, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 77, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 66, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 110, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 88, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 99, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 22, 0, 11, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 33, 0, 11, 24 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "sprint",
"speed": 10.0
}, {
"frames": [ SubResource( 6 ), SubResource( 5 ), SubResource( 8 ), SubResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ SubResource( 16 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "ladder",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ) ],
"loop": true,
"name": "air_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "air_walk",
"speed": 5.0
} ]

[sub_resource type="CanvasItemMaterial" id=30]
blend_mode = 1

[sub_resource type="Animation" id=19]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=20]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.768627, 0.180392, 0.180392, 1 ), Color( 0.768627, 0.180392, 0.180392, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 2, 20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 15.0 ]
}

[sub_resource type="Gradient" id=21]
offsets = PoolRealArray( 0, 0.0955882, 1 )
colors = PoolColorArray( 0.690196, 0.690196, 0.690196, 0.0901961, 0.752637, 0.752637, 0.752637, 0.072017, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=22]
gradient = SubResource( 21 )

[sub_resource type="Curve" id=23]
_data = [ Vector2( 0.0394737, 0.6 ), 0.0, 0.0, 0, 0, Vector2( 0.973684, 0.490909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=24]
curve = SubResource( 23 )

[sub_resource type="ParticlesMaterial" id=25]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.6
scale_curve = SubResource( 24 )
color_ramp = SubResource( 22 )

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelUpLight:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.792157, 0.705882, 0.403922, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("LevelUpLight:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.02, 0.02 ) ]
}

[sub_resource type="Animation" id=29]
resource_name = "level_up"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ), Vector2( 1, 1 ), Vector2( -1, 1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 11, 0 ), Vector2( 0, 0 ), Vector2( 11, 0 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("LevelUpLight:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.792157, 0.705882, 0.403922, 0 ), Color( 0.752941, 0.403922, 0.792157, 0.784314 ), Color( 0.792157, 0.705882, 0.403922, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("LevelUpLight:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.02, 0.02 ), Vector2( 0.3, 0.3 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=28]
resource_name = "spawn"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 5, 12 ), Vector2( 0, 0 ) ]
}

[node name="Player" type="Node2D"]
pause_mode = 2
z_index = 3

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=["Player"]]
collision_layer = 4
collision_mask = 1027
script = ExtResource( 17 )

[node name="FootstepSounds" type="Node2D" parent="KinematicBody2D"]
script = ExtResource( 31 )

[node name="FootstepGrass" type="AudioStreamPlayer" parent="KinematicBody2D/FootstepSounds"]
stream = ExtResource( 32 )
volume_db = 12.0
pitch_scale = 1.1
bus = "Audio"
script = ExtResource( 41 )
pitch_modifier = 0.1

[node name="FootstepCloud" type="AudioStreamPlayer" parent="KinematicBody2D/FootstepSounds"]
stream = ExtResource( 34 )
volume_db = 3.0
bus = "Audio"
script = ExtResource( 41 )

[node name="FootstepWood" type="AudioStreamPlayer" parent="KinematicBody2D/FootstepSounds"]
stream = ExtResource( 33 )
volume_db = 3.0
bus = "Audio"
script = ExtResource( 41 )

[node name="FootstepRock" type="AudioStreamPlayer" parent="KinematicBody2D/FootstepSounds"]
stream = ExtResource( 35 )
volume_db = 6.0
bus = "Audio"
script = ExtResource( 41 )

[node name="FootstepSand" type="AudioStreamPlayer" parent="KinematicBody2D/FootstepSounds"]
stream = ExtResource( 37 )
volume_db = 8.0
bus = "Audio"
script = ExtResource( 41 )

[node name="FootstepSandstone" type="AudioStreamPlayer" parent="KinematicBody2D/FootstepSounds"]
stream = ExtResource( 38 )
volume_db = 8.0
bus = "Audio"
script = ExtResource( 41 )

[node name="FootstepIce" type="AudioStreamPlayer" parent="KinematicBody2D/FootstepSounds"]
stream = ExtResource( 12 )
volume_db = 20.0
bus = "Audio"
script = ExtResource( 41 )

[node name="FootstepIceBlock" type="AudioStreamPlayer" parent="KinematicBody2D/FootstepSounds"]
stream = ExtResource( 12 )
volume_db = 20.0
bus = "Audio"
script = ExtResource( 41 )
pitch_modifier = 0.25

[node name="FootstepSnow" type="AudioStreamPlayer" parent="KinematicBody2D/FootstepSounds"]
stream = ExtResource( 42 )
volume_db = 6.0
bus = "Audio"
script = ExtResource( 41 )

[node name="Timer" type="Timer" parent="KinematicBody2D/FootstepSounds"]
wait_time = 0.3

[node name="HurtSound" type="AudioStreamPlayer" parent="KinematicBody2D"]
pause_mode = 2
stream = ExtResource( 13 )
pitch_scale = 0.89
bus = "Audio"

[node name="WallJump" type="AudioStreamPlayer" parent="KinematicBody2D"]
pause_mode = 2
stream = ExtResource( 36 )
volume_db = -20.0
pitch_scale = 0.89
bus = "Audio"

[node name="DieSound" type="AudioStreamPlayer" parent="KinematicBody2D"]
pause_mode = 2
stream = ExtResource( 24 )
bus = "Audio"

[node name="DashFailedSound" type="AudioStreamPlayer" parent="KinematicBody2D"]
pause_mode = 2
stream = ExtResource( 25 )
volume_db = 1.0
bus = "Audio"

[node name="JumpSound" type="AudioStreamPlayer" parent="KinematicBody2D"]
pause_mode = 2
bus = "Audio"

[node name="DashSound" type="AudioStreamPlayer" parent="KinematicBody2D"]
pause_mode = 2
stream = ExtResource( 19 )
volume_db = -5.0
pitch_scale = 0.73
bus = "Audio"

[node name="WaterSplashIn" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 30 )
bus = "Audio"

[node name="WaterSplashOut" type="AudioStreamPlayer" parent="KinematicBody2D"]
stream = ExtResource( 29 )
bus = "Audio"

[node name="FSM" type="Node" parent="KinematicBody2D"]
pause_mode = 1
script = ExtResource( 5 )

[node name="Idle" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 6 )

[node name="Walk" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 9 )

[node name="Sprint" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 15 )

[node name="Dash" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 8 )

[node name="WallSlide" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 20 )

[node name="WallJump" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 23 )

[node name="Jump" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 14 )

[node name="Fall" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 11 )

[node name="WaterIdle" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 10 )

[node name="WaterMove" type="Node" parent="KinematicBody2D/FSM"]
script = ExtResource( 7 )

[node name="PowerupAdder" type="Position2D" parent="KinematicBody2D"]
script = ExtResource( 26 )

[node name="Label" type="Label" parent="KinematicBody2D"]
anchor_right = 0.828
margin_left = 13.0
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Checks" type="Node2D" parent="KinematicBody2D"]

[node name="Down" type="RayCast2D" parent="KinematicBody2D/Checks"]
position = Vector2( 5, 25.5 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 5.6 )
collision_mask = 3

[node name="FloorLeft" type="RayCast2D" parent="KinematicBody2D/Checks"]
position = Vector2( 2, 22.532 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 3

[node name="FloorRight" type="RayCast2D" parent="KinematicBody2D/Checks"]
position = Vector2( 8, 22.532 )
enabled = true
cast_to = Vector2( 0, 3 )
collision_mask = 3

[node name="WallLeft" type="RayCast2D" parent="KinematicBody2D/Checks"]
position = Vector2( 4, 11.5 )
enabled = true
cast_to = Vector2( -6, 0 )

[node name="WallRight" type="RayCast2D" parent="KinematicBody2D/Checks"]
position = Vector2( 6, 11.5 )
enabled = true
cast_to = Vector2( 6, 0 )

[node name="LowerWallLeft" type="RayCast2D" parent="KinematicBody2D/Checks"]
position = Vector2( 4, 22 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 1027

[node name="LowerWallRight" type="RayCast2D" parent="KinematicBody2D/Checks"]
position = Vector2( 6, 22 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 1027

[node name="Area2D" type="Area2D" parent="KinematicBody2D" groups=["Player"]]
visible = false
collision_layer = 4
collision_mask = 123

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Area2D"]
position = Vector2( 5.5, 13 )
shape = SubResource( 2 )

[node name="Boots" type="Area2D" parent="KinematicBody2D" groups=["PlayerBoots"]]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Boots"]
position = Vector2( 5.5, 22 )
shape = SubResource( 26 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
position = Vector2( 5.5, 13 )
shape = SubResource( 1 )

[node name="InvincibleTimer" type="Timer" parent="KinematicBody2D"]
wait_time = 0.5
autostart = true

[node name="Smoothing2D" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 16 )
target = NodePath("../KinematicBody2D")

[node name="Camera2D" type="Camera2D" parent="Smoothing2D"]
pause_mode = 2
current = true
zoom = Vector2( 0.3, 0.3 )
process_mode = 0
drag_margin_v_enabled = true
smoothing_speed = 20.0
drag_margin_top = 0.53
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Smoothing2D"]
pause_mode = 2
material = ExtResource( 2 )
z_index = 3
frames = SubResource( 18 )
animation = "idle"
frame = 1
playing = true
centered = false
script = ExtResource( 4 )
normal_color_1 = Color( 0.556863, 0.141176, 0.666667, 1 )
normal_color_2 = Color( 0.482353, 0.121569, 0.635294, 1 )
normal_color_3 = Color( 0.415686, 0.105882, 0.603922, 1 )
gold_color_1 = Color( 1, 0.627451, 0, 1 )
gold_color_2 = Color( 1, 0.560784, 0, 1 )
gold_color_3 = Color( 0.960784, 0.498039, 0.0901961, 1 )
diamond_color_1 = Color( 0.0117647, 0.607843, 0.898039, 1 )
diamond_color_2 = Color( 0.00784314, 0.533333, 0.819608, 1 )
diamond_color_3 = Color( 0.00784314, 0.466667, 0.741176, 1 )

[node name="LevelUpLight" type="Sprite" parent="Smoothing2D/AnimatedSprite"]
modulate = Color( 0.792157, 0.705882, 0.403922, 0 )
material = SubResource( 30 )
position = Vector2( 5.5, 14 )
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 39 )

[node name="Equippable" type="Position2D" parent="Smoothing2D/AnimatedSprite"]
pause_mode = 1
position = Vector2( 5.5, 13 )
script = ExtResource( 28 )

[node name="EquippableHolder" type="Position2D" parent="Smoothing2D/AnimatedSprite"]
pause_mode = 1
position = Vector2( 5.5, 13 )
script = ExtResource( 40 )

[node name="FlashAnimationPlayer" type="AnimationPlayer" parent="Smoothing2D/AnimatedSprite"]
pause_mode = 2
anims/flash = SubResource( 19 )

[node name="DeathAnimationPlayer" type="AnimationPlayer" parent="Smoothing2D/AnimatedSprite"]
pause_mode = 2
anims/death = SubResource( 20 )

[node name="Particles2D" type="Particles2D" parent="Smoothing2D/AnimatedSprite"]
pause_mode = 1
modulate = Color( 1, 0.392157, 0.392157, 1 )
position = Vector2( 5.5, 13 )
emitting = false
amount = 18
lifetime = 0.4
visibility_rect = Rect2( -100.209, -100, 200, 200 )
local_coords = false
process_material = SubResource( 25 )
texture = ExtResource( 21 )

[node name="Particles2DReverse" type="Particles2D" parent="Smoothing2D/AnimatedSprite"]
pause_mode = 1
modulate = Color( 1, 0.396078, 0.396078, 1 )
position = Vector2( 5.5, 13 )
emitting = false
amount = 18
lifetime = 0.4
visibility_rect = Rect2( -100.209, -100, 200, 200 )
local_coords = false
process_material = SubResource( 25 )
texture = ExtResource( 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Smoothing2D/AnimatedSprite"]
pause_mode = 2
anims/RESET = SubResource( 27 )
anims/level_up = SubResource( 29 )
anims/spawn = SubResource( 28 )

[node name="SpawnSound" type="AudioStreamPlayer" parent="Smoothing2D/AnimatedSprite"]
pause_mode = 2
stream = ExtResource( 27 )
volume_db = -12.0
bus = "Audio"

[node name="Dust" parent="Smoothing2D" instance=ExtResource( 18 )]
pause_mode = 2
visible = false

[connection signal="timeout" from="KinematicBody2D/FootstepSounds/Timer" to="KinematicBody2D/FootstepSounds" method="_on_Timer_timeout"]
[connection signal="timeout" from="KinematicBody2D/InvincibleTimer" to="KinematicBody2D" method="_on_InvincibleTimer_timeout"]
